--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -93,8 +93,9 @@
             <span aria-hidden="true">Ponce</span>
           </span>
           <span class="hero-role is-flex">
-            <span split-by="letter" class="letters-rotate" aria-label="{{site.data.ui.hero.role.full[page.lang]}}">{{site.data.ui.hero.role.a[page.lang]}}</span>
-            <span split-by="letter" class="letters-rotate" aria-label="{{site.data.ui.hero.role[page.lang]}}">{{site.data.ui.hero.role.b[page.lang]}}</span>
+            <span split-by="letter" class="letters-rotate" aria-label="{{site.data.ui.hero.role.full[page.lang]}}">
+              {{site.data.ui.hero.role.a[page.lang]}} {{site.data.ui.hero.role.b[page.lang]}}
+            </span>
           </span>
         </h1>
         <p class="hero-desc"><strong>{{site.data.ui.hero.desc[page.lang]}}</strong></p>
