--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,46 +22,22 @@
   </script>
 
   <header class="pt-2">
-    <section class="container is-max-desktop is-flex is-align-items-center">
+
+
+    <section class="is-flex is-align-items-center">
       <nav class="has-full-width">
-        <ul class="is-flex is-align-items-center">
+        <ul class="container is-max-desktop">
           <li class="logo">
-            <a href="/" class="">
-              APS
+            <a href="/" class="button is-secondary">
+              <span>APS</span>
             </a>
           </li>
           <li>
-            <a class="p-0" href="/">es</a>
-            <span>|</span>
-            <a class="p-0" href="/en">en</a>
-          </li>
-          <li class="is-hidden-mobile">
-            <a class="" href="#{{site.data.ui.header.projects.id[page.lang]}}" title="{{site.data.ui.header.projects.label[page.lang]}}">{{site.data.ui.header.projects.label[page.lang]}}
-            </a>
-          </li>
-          <li class="is-hidden-mobile">
-            <a class="" href="#{{site.data.ui.header.about.id[page.lang]}}" title="{{site.data.ui.header.about.label[page.lang]}}">{{site.data.ui.header.about.label[page.lang]}}
-            </a>
-          </li>
-          <li class="is-hidden-mobile">
-            <a class="" href="#{{site.data.ui.header.contact.id[page.lang]}}" title="{{site.data.ui.header.contact.label[page.lang]}}">{{site.data.ui.header.contact.label[page.lang]}}
-            </a>
-          </li>
-          <li>
-            <button id="toggle" class="button is-small is-ghost p-0">
-              <span class="is-sr-only">light/dark mode</span>
-              <svg class="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M12 16a4 4 0 1 0 0-8 4 4 0 0 0 0 8z"></path>
-                <path d="M12 4h.01"></path>
-                <path d="M20 12h.01"></path>
-                <path d="M12 20h.01"></path>
-                <path d="M4 12h.01"></path>
-                <path d="M17.657 6.343h.01"></path>
-                <path d="M17.657 17.657h.01"></path>
-                <path d="M6.343 17.657h.01"></path>
-                <path d="M6.343 6.343h.01"></path>
-              </svg>
-              <svg class="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <button id="toggle" class="button is-primary">
+              <!-- is-sr-only -->
+              <span class="hides-if-dark">{{site.data.ui.btns.use-dark[page.lang]}}</span>
+              <span class="hides-if-light">{{site.data.ui.btns.use-light[page.lang]}}</span>
+              <!-- <svg class="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M 12 16 a 4 4 0 1 0 0 -8 a 4 4 0 0 0 0 8 z "></path>
                 <path d="M 12 4 v 2"></path>
                 <path d="M 20 12 h -2 "></path>
@@ -71,102 +47,213 @@
                 <path d="M 17.657 17.657 l -1.657 -1.657 "></path>
                 <path d=" M 6.343 17.657 l 1.657 -1.657"></path>
                 <path d="M 6.343 6.343 l 1.657 1.657"></path>
-              </svg>
-
+              </svg> -->
             </button>
           </li>
-
+          <li>
+            {%if page.lang=='es'%}
+            <a class="button is-primary" href="/en" title="{{site.data.ui.btns.english.title}}">{{site.data.ui.btns.english.text}}</a>
+            {%else%}
+            <a class="button is-primary" href="/" title="{{site.data.ui.btns.spanish.title}}">{{site.data.ui.btns.spanish.text}}</a>
+            {%endif%}
+          </li>
         </ul>
       </nav>
     </section>
   </header>
 
 
-  <main>
 
+  <div class="fixed icono-mouse"></div>
+
+  <style>
+    .fixed {
+      position: fixed;
+      left: 0;
+      top: 0;
+      padding: .5rem;
+      /* width: 4rem; */
+      scale: 2;
+    }
+  </style>
+
+  <main>
     <section class="hero">
       <div class="container is-max-desktop">
-        <p class="subtitle is-4">{{site.data.ui.hero.hello[page.lang]}}</p>
-        <h1>
-          <span class="hero-name-and-role colored" aria-label="Araceli Ponce Sanga">
-            <span aria-hidden="true">Araceli</span>
-            <span aria-hidden="true">Ponce</span>
-          </span>
+        <span class="hello">
+          {{-site.data.ui.hero[page.lang]hello | markdownify-}}
+          <span id="fraseIs"></span>
+        </span>
+        <!--         <h1>
           <span class="hero-role is-flex">
-            <span split-by="letter" class="letters-rotate" aria-label="{{site.data.ui.hero.role.full[page.lang]}}">
-              {{site.data.ui.hero.role.a[page.lang]}} {{site.data.ui.hero.role.b[page.lang]}}
+            <span split-by="letter" class="letters-rotate" aria-label="{{site.data.ui.hero[page.lang]role}}">
+              {{site.data.ui.hero[page.lang]role_line1}} {{site.data.ui.hero[page.lang]role_line2}}
             </span>
           </span>
-        </h1>
-        <p class="hero-desc"><strong>{{site.data.ui.hero.desc[page.lang]}}</strong></p>
+        </h1> -->
+        <p class="hero-desc"><strong>{{site.data.ui.newhero[page.lang]desc}}</strong></p>
+
+        <!--  <p class="pop">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos debitis facere aspernatur dignissimos animi inventore assumenda, accusamus, modi quae maiores temporibus in pariatur iusto nisi placeat, fugiat libero. Libero, officia.</p> -->
+        <div class="pop">
+          <li>
+            <a href="#" class="btn">Github</a>
+          </li>
+          <li>
+            <a href="#" class="btn">Email</a>
+          </li>
+        </div>
+    </section>
+
+    <script>
+
+
+      const frases = [
+        'Desarrolladora web',
+        'y nunca uso divs como botones.',
+        'e intento usar los correctos atributos aria.',
+        'está aprendiendo Angular.',
+        'y estoy diseñando esta web.',
+        'y .',
+      ];
+      const phrases = [
+        'Front End Developer',
+        'I never use div for buttons',
+        'I am learning Angular',
+        'I enjoy crafting new things with HTML, CSS and Javascript',
+        'And this is my portfolio'
+      ]
+
+
+
+      const fraseIs = document.getElementById('fraseIs');
+      let fraseActual = 0;
+      if (window.location.pathname == '/en/') {
+        console.log('hi')
+        cambiarFrases(phrases);
+      } else if (window.location.pathname == '/') {
+        cambiarFrases(frases);
+        console.log('hola')
+      }
+
+      function cambiarFrases(arregloDeFrases) {
+        fraseIs.textContent = arregloDeFrases[fraseActual];
+
+        fraseIs.addEventListener('animationiteration', () => {
+          let fraseSiguiente;
+          do {
+            fraseSiguiente = Math.floor(Math.random() * arregloDeFrases.length);
+          } while (fraseSiguiente === fraseActual);
+          fraseActual = fraseSiguiente;
+          fraseIs.textContent = arregloDeFrases[fraseActual];
+          console.log(arregloDeFrases[fraseActual])
+        });
+      }
+
+    </script>
+    <ol>
+      {%-for item in site.data.ui.nav[page.lang]-%}
+      <li class="is-hidden-mobile">
+        <a class="" href="#{{item[1].id}}" title="{{item[1].label}}">{{-item[1].label-}}
+        </a>
+      </li>
+      {%-endfor-%}
+    </ol>
+    <style>
+      .pop {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        background: pink;
+        width: 10rem;
+        z-index: 3;
+      }
+    </style>
+
+    <section id="{{site.data.ui.nav[page.lang]projects.id}}" class="projects" aria-labelledby="projectsTitle">
+
+      <div class="container is-max-desktop ">
+        {%-for item in site.data.ui.projects[page.lang]-%}
+        <!-- <pre>{{item[0]}},{{item[1]}}</pre> -->
+        {%if item[0]=='title'%}
+        <h2 id="projectsTitle" split-by="letter" aria-label="{{item[1]}}" class="title letters-bounce">{{item[1]}}</h2>
+        {%else%}
+        <p class="subtitle">{{item[1]}}</p>
+        {%endif%}
+        {%endfor%}
+
+
+        <ul class="cards flip">
+          {%-for project in site.data.projects-%}
+          <li>
+            <h3 class="project__name">{{project.name}}</h3>
+            <div class="card" tabindex="0">
+              <div class="card-inner">
+                <div class="card-front">
+                  <figure>
+                    <img src="{{site.url}}/imgs/{{project.img}}" alt="{{project.name | prepend: 'captura de pantalla de ' }}">
+                  </figure>
+                  <!-- <h3 class="project__name">{{project.name}}</h3> -->
+                  {{-project.subtitle[page.lang]| markdownify-}}
+                </div>
+
+                <div class="card-back">
+                  {{-project.desc[page.lang] | markdownify-}}
+                  <div class="is-flex">
+                    {% if project.link-%}
+                    <a href="{{project.link}}" target="_blank" rel="noopener noreferrer" class="button is-primary" title="{{site.data.ui.btns.demo[page.lang]}}">{{site.data.ui.btns.demo[page.lang]}}</a>
+                    {% endif-%}
+                    {% if project.repo_name-%}
+                    <a href="https://github.com/araceliponce/{{project.repo_name}}" target="_blank" rel="noopener noreferrer" class="button is-secondary" title="{{site.data.ui.btns.code[page.lang]}}">{{site.data.ui.btns.code[page.lang]}}</a>
+                    {% endif-%}
+                  </div>
+                </div>
+              </div>
+          </li>
+          {% endfor %}
+        </ul>
       </div>
     </section>
 
-    <section id="{{site.data.ui.header.projects.id[page.lang]}}" class="container is-max-desktop" aria-labelledby="projectsTitle">
-      <h2 id="projectsTitle" split-by="letter" aria-label="{{site.data.ui.projects.title[page.lang]}}" class="title letters-bounce">{{site.data.ui.projects.title[page.lang]}}</h2>
-      <p class="subtitle"></p>
 
-      <ul class="projects">
-        {%-for project in site.data.projects-%}
-        <li>
-          <div class="card" tabindex="0">
-            <div class="card__side card__side--front">
-              <figure>
-                <img src="{{site.url}}/imgs/{{project.img}}" alt="{{project.name | prepend: 'captura de pantalla de ' }}">
-              </figure>
-              <h3 class="project__name">{{project.name}}</h3>
-            </div>
-            <div class="card__side card__side--back">
-              {{-project.desc[page.lang] | markdownify-}}
-              <div class="is-flex">
-                {% if project.link %}
-                <a href="{{project.link}}" target="_blank" rel="noopener noreferrer" class="button is-primary" title="{{site.data.ui.btns.demo[page.lang]}}">{{site.data.ui.btns.demo[page.lang]}}</a>
-                {% endif %}
-                {% if project.repo_name %}
-                <a href="https://github.com/araceliponce/{{project.repo_name}}" target="_blank" rel="noopener noreferrer" class="button is-secondary" title="{{site.data.ui.btns.code[page.lang]}}">{{site.data.ui.btns.code[page.lang]}}</a>
-                {% endif %}
-              </div>
-            </div>
-        </li>
-        {% endfor %}
-      </ul>
+
+    <style>
+      .fun {
+        box-shadow: -10px 8px 0px rgb(196 181 253);
+      }
+    </style>
+    <section id="{{site.data.ui.nav[page.lang]about.id}}" class="about container is-max-desktop" aria-labelledby="aboutTitle">
+      {%-for item in site.data.ui.about[page.lang]-%}
+
+      {%if item[0]=='title'%}
+      <h2 id="aboutTitle" split-by="letter" aria-label="{{item[1]}}" class="title letters-bounce">{{item[1]}}</h2>
+      {%else%}
+      <div class="desc">{{item[1]}}</div>
+      {%endif%}
+
+      {%endfor%}
+
+
     </section>
+    <section id="{{site.data.ui.nav[page.lang]skills.id}}" class="skills container is-max-desktop" aria-labelledby="skillsTitle">
+      {%-for item in site.data.ui.skills[page.lang]-%}
 
+      {%if item[0]=='title'%}
+      <h2 id="skillsTitle" split-by="letter" aria-label="{{item[1]}}" class="title letters-bounce">{{item[1]}}</h2>
+      {%else%}
+      {{-item[1] |markdownify-}}
+      {%endif%}
 
-    <section id="{{site.data.ui.header.about.id[page.lang]}}" class="about container is-max-desktop" aria-labelledby="aboutTitle">
-      <h2 id="aboutTitle" split-by="letter" aria-label="{{site.data.ui.about.title[page.lang]}}" class="title letters-bounce">{{site.data.ui.about.title[page.lang]}}</h2>
-      <p class="subtitle">{{site.data.ui.about.a[page.lang]}}</p>
-      <p class="subtitle">{{site.data.ui.about.b[page.lang]}}</p>
-      <p class="subtitle">{{site.data.ui.about.c[page.lang]}}</p>
-      <p class="subtitle">{{site.data.ui.about.d[page.lang]}}</p>
+      {%endfor%}
 
       {% include tools.html %}
-    </section>
 
-    <section id="{{site.data.ui.header.contact.id[page.lang]}}" class="contact container is-max-desktop" aria-labelledby="contactTitle">
-      <h2 id="contactTitle" split-by="letter" aria-label="{{site.data.ui.contact.title[page.lang]}}" class="title letters-bounce">{{site.data.ui.contact.title[page.lang]}}</h2>
-      <p class="subtitle">{{site.data.ui.contact.how_to[page.lang]}}</p>
-      <section class="is-flex">
-        <a href="mailto:aponcesanga@gmail.com" title="gmail de Araceli Ponce">
-          <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <title>Gmail</title>
-            <path d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z" />
-          </svg>
-        </a>
-        <a href="https://github.com/araceliponce" target="_blank" rel="noopener noreferrer" title="github de Araceli Ponce">
-          <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <title>GitHub</title>
-            <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
-          </svg>
-        </a>
-      </section>
     </section>
   </main>
 
   <footer class="bg-52">
     <section class="container is-max-desktop is-flex is-align-items-center">
-      <p>{{site.data.ui.footer.copy[page.lang]}}</p>
-      <a class="button" href="#" title="{{site.data.ui.footer.top[page.lang]}}">{{site.data.ui.footer.top[page.lang]}}</a>
+      <p>{{site.data.ui.footer[page.lang]copy}}</p>
+      <a class="button" href="#" title="{{site.data.ui.footer[page.lang]top}}">{{site.data.ui.footer[page.lang]top}}</a>
     </section>
   </footer>
 </body>
