--- a/styles/css/inicio.css
+++ b/styles/css/inicio.css
@@ -551,15 +551,22 @@ p strong {
 
 /* BG STYLES */
 .noise-container {
-  position: fixed;
-  inset: 0;
-  z-index: 52;
-  pointer-events: none;
+  display: none;
+}
 
-  opacity: .5;
-  mix-blend-mode: soft-light;
-  width: 100%;
-  height: 100vh;
+@media screen and(min-width:30rem) {
+
+  .noise-container {
+    position: fixed;
+    inset: 0;
+    z-index: 52;
+    pointer-events: none;
+
+    opacity: .5;
+    mix-blend-mode: soft-light;
+    width: 100%;
+    height: 100vh;
+  }
 }
 
 .gradient {
