--- a/styles/css/inicio.css
+++ b/styles/css/inicio.css
@@ -552,6 +552,8 @@ p strong {
 /* BG STYLES */
 .noise-container {
   display: none;
+  width: 0;
+  height: 0;
 }
 
 @media screen and(min-width:30rem) {
