--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/113866541">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{site.url}}/styles/index.css">
+  <link rel="stylesheet" href="{{site.url}}/styles/index.min.css">
   <!-- <link rel="stylesheet" href="{{site.url}}/styles/{{page.layout}}.css"> -->
 
   <!-- JS -->
