--- a/_layouts/inicio.html
+++ b/_layouts/inicio.html
@@ -48,22 +48,38 @@
         .on-the-left {
           position: absolute;
           min-width: 16ch;
+          left: 2rem;
+
         }
 
         .on-the-right {
           position: absolute;
+          right: 2rem;
+        }
+
+        .has-inline-padding {
+          padding-inline: 0;
+        }
+
+        header {
+          margin-top: 1rem;
         }
 
         @media screen and (min-width: 30rem) {
+          header {
+            margin-top: .5rem;
+          }
+
           .on-the-left {
             position: fixed;
-            left: 2rem;
-            min-width: 16ch;
           }
 
           .on-the-right {
             position: fixed;
-            right: 2rem;
+          }
+
+          .has-inline-padding {
+            padding-inline: 2rem;
           }
         }
       </style>
