--- a/_layouts/inicio.html
+++ b/_layouts/inicio.html
@@ -36,9 +36,13 @@
     </filter>
     <rect width="100%" height="100%" filter="url(#noise)"></rect>
   </svg>
-  <div class="radial-gradient"></div>
+  <!-- <div class="radial-gradient"></div> -->
 
-  <header style="height:0 ;" class="relative">
+  <!--   <header style="height:0 ;" class="relative">
+
+  </header> -->
+
+  <main>
     <a class="button is-small on-the-right" href="{{site.data.ui.btns.oppositeLang[page.lang]link}}" title="{{site.data.ui.btns.oppositeLang[page.lang]label}}">
       {{site.data.ui.btns.oppositeLang[page.lang].label}}
     </a>
@@ -101,9 +105,7 @@
         </button>
       </li>
     </ul>
-  </header>
 
-  <main>
     <section class="hero">
       <div class="wrapper wrapper100vh ">
 
