--- a/_layouts/inicio.html
+++ b/_layouts/inicio.html
@@ -36,7 +36,7 @@
     </filter>
     <rect width="100%" height="100%" filter="url(#noise)"></rect>
   </svg>
-  <!-- <div class="radial-gradient"></div> -->
+  <div class="radial-gradient"></div>
 
   <!--   <header style="height:0 ;" class="relative">
 
