--- a/styles/css/inicio.css
+++ b/styles/css/inicio.css
@@ -706,7 +706,7 @@ p strong {
   inset: 0;
   /* height: 100vmax;
   width: 100vmax; */
-  height: 100%;
+  height: 100vh;
   width: 100%;
 
   /* fallback if gradient doesnt work */
