--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,10 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title> {{ site.title }} </title>
+  <title>
+    {{ site.title }}
+    {% if page.title %} | {{page.title}}{% endif %}
+  </title>
 
   <meta name="author" content="{{ site.author }}">
 
@@ -14,8 +17,12 @@
   <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/113866541">
 
   <!-- CSS -->
+
+  {% if page.ss %}
+  <link rel="stylesheet" href="{{site.url}}/styles/{{page.ss}}">
+  {% else %}
   <link rel="stylesheet" href="{{site.url}}/styles/index.min.css">
-  <!-- <link rel="stylesheet" href="{{site.url}}/styles/{{page.layout}}.css"> -->
+  {% endif %}
 
   <!-- JS -->
   <script src="{{site.url}}/scripts/index.js" defer></script>
@@ -55,5 +62,5 @@
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;600&family=Inter&display=swap" rel="stylesheet">
 </head>
