site.url en el enlace

--- a/_layouts/inicio.html
+++ b/_layouts/inicio.html
@@ -37,7 +37,7 @@
           <a class="button is-small" href="{{page.url}}online-cv" title="{{site.data.ui.btns.goToOnlineCv[page.lang]}}">
             {{site.data.ui.btns.goToOnlineCv[page.lang]}}
           </a>
-          <a class="button is-small" href="./assets/cv_{{page.lang}}.pdf" download="webdev_araceliponce" title="{{site.data.ui.btns.fastDownloadCv[page.lang]}}">
+          <a class="button is-small" href="{{site.url}}/assets/cv_{{page.lang}}.pdf" download="webdev_araceliponce" title="{{site.data.ui.btns.fastDownloadCv[page.lang]}}">
             {% include download-svg.html %}
           </a>
         </div>
