paddings en contenedor y en fixed btns

--- a/_layouts/inicio.html
+++ b/_layouts/inicio.html
@@ -82,10 +82,12 @@
 
           .on-the-left {
             position: fixed;
+            left: 1rem;
           }
 
           .on-the-right {
             position: fixed;
+            right: 1rem;
           }
 
           .has-inline-padding {
